adjust navbar mobile height

--- a/scss/dependencies/navbar.scss
+++ b/scss/dependencies/navbar.scss
@@ -43,7 +43,11 @@
   left:0;
 }
 
-#header.full-header #primary-menu > ul {
+.device-sm #header.full-header #primary-menu > ul, .device-xs #header.full-header #primary-menu > ul , .device-xxs #header.full-header #primary-menu > ul  {
   margin-top:20px !important;
 }
+body.stretched #header.full-header .container {
+  padding:0;
+}
+
 
