finish styling non-mobile meet the doctors section

--- a/scss/dependencies/phone-slug.scss
+++ b/scss/dependencies/phone-slug.scss
@@ -76,3 +76,8 @@ $phone-color: #FFF;
 .phone-slug .col-sm-6.tleft {
   transform: translateY(25%);
 }
+#phone-slug-1 {
+  border-bottom:3px solid #FFF;
+}
+
+
