--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "dependencies/specials.scss";
 @import "dependencies/location-section.scss";
 @import "dependencies/slider.scss";
+@import "dependencies/meet-the-doctor.scss";
 
 
 // End Canvas Dependencies //
