--- a/css/main.css
+++ b/css/main.css
@@ -25900,6 +25900,9 @@ a.social-icon.si-colored {
 .phone-slug .col-sm-6.tleft {
   transform: translateY(25%); }
 
+#phone-slug-1 {
+  border-bottom: 3px solid #FFF; }
+
 /** Contact Modal **/
 .form-error {
   color: #D56724;
@@ -26231,6 +26234,36 @@ h4.modal-title {
   .device-lg #slide-2 .slider-caption {
     padding-left: 90px;
     top: 150px !important; } }
+
+#meet-the-doctor h3 {
+  font-size: 32px;
+  font-weight: 700;
+  color: #FCDF53;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  margin-bottom: -10px; }
+
+#meet-the-doctor h2 {
+  font-size: 64px;
+  color: #FFF6CD;
+  margin-bottom: -5px;
+  font-weight: 900;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); }
+
+#meet-the-doctor h4 {
+  font-weight: 700;
+  font-size: 28px;
+  color: #FFFFFF;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); }
+
+#meet-the-doctor {
+  padding: 60px 0;
+  background-image: url("../images/zandstra-bio.jpg");
+  background-size: cover;
+  backround-position: 25% 25%; }
+
+#meet-the-doctor p {
+  font-size: 12px;
+  color: #312400; }
 
 body {
   font-family: "Lato", sans-serif; }
