--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import "dependencies/location-section.scss";
 @import "dependencies/slider.scss";
 @import "dependencies/meet-the-doctor.scss";
+@import "dependencies/specials-below.scss";
 
 
 // End Canvas Dependencies //
@@ -72,6 +73,7 @@ p {
   background:$button-color;
   padding-top:2px;
   border-radius:0;
+  box-shadow:none;
 }
 .button:hover {
   background:$button-hover
