--- a/scss/dependencies/specials.scss
+++ b/scss/dependencies/specials.scss
@@ -1,6 +1,5 @@
 /** SPECIALS **/
 
-$section-background:gray;
 $h2-color: #674C12;
 $specials-1-color: #E59908;
 $specials-2-color: #106547;
@@ -12,7 +11,6 @@ $p-color: red;
 .section-specials {
   padding-top:0px;
   padding-bottom:20px;
-  background:$section-background;
   background-size:cover;
 }
 .section-specials h2 {
@@ -24,23 +22,20 @@ $p-color: red;
 }
 
 .specials-1 {
-  background: $specials-1-color;
   color: $specials-1-color;
+  background:#A68A00;
 }
-.specials-1.specials-circle {
-  background: $specials-1-color;
-}
+
 .specials-2 {
-  background: $specials-2-color;
   color: $specials-2-color;
+  background:#3B7030;
 }
 .specials-2.specials-circle {
-  background: $specials-2-color;
 }
 
 .specials-3 {
-  background: $specials-3-color;
   color: $specials-3-color;
+  background:#E87500;
 }
 .specials-3.specials-circle {
   background: $specials-3-color;
@@ -48,26 +43,28 @@ $p-color: red;
 .specials-row h5 {
   font-size:36px;
   color:#FFF;
-  font-weight:800;
+  font-weight:900;
   line-height:40px !important;
 
 }
 .specials-row p {
-  color:$p-color;
+  color:#FFF;
   font-size:18px;
   margin-bottom:0px;
   line-height:25px !important;
   margin-top:20px;
   margin-bottom:10px;
+  font-family:'Open Sans', sans-serif;
 }
 .specials-label {
-  font-size:14px;
-  color:$p-color;
+  font-weight:400;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  color: #FFFFFF;
 }
 .specials-save {
   font-size:18px;
   text-transform:uppercase;
-  background:none;
   font-family:$save-font-family;
   font-weight:400;
 }
@@ -77,7 +74,6 @@ $p-color: red;
   margin-left:20px;
   margin-right:20px;
   padding-bottom:20px;
-  background:#FFF;
   margin-bottom:50px;
   opacity:.85
 }
@@ -93,29 +89,34 @@ $p-color: red;
   height:196px;
   padding-top:15px;
   border-radius:8px 8px 0px 0px;
+  background:none;
 }
 .specials-circle {
   position:relative;
-  border:7px solid #FFF;
-  width:146px;
-  height:146px;
+  width:165px;
+  height:165px;
   border-radius:50%;
   top:-73px;
   margin:0 auto;
   margin-bottom:-73px;
 }
 .specials-bottom {
-  padding-top:10px;
+  padding-top:20px;
   padding-left:12.5px;
   padding-right:12.5px;
 }
 .specials-save {
   font-size:18px;
+  background:none;
+  color:#FFF;
+  font-family:'Lato', sans-serif;
+  font-weight:700;
 }
 .price {
-  font-size:84px;
+  font-size:100px;
   color:#FFF;
   font-weight:700;
+  font-family:'Open Sans', sans-serif;
 }
 .dollar {
   font-size:36px;
@@ -123,6 +124,7 @@ $p-color: red;
   top:-37.5px;
   font-family: 'Lato', sans-serif;
   position:relative;
+  font-weight:400;
 
 }
 
@@ -167,8 +169,25 @@ $p-color: red;
   margin-bottom:0;
 }
 #specials-top {
-  background:#3C4109;
   padding-top:10px;
   height:145px;
   border-top:3px solid #FFF;
+  background:#3C4109;
+}
+
+#specials {
+  background-image:url('../images/specials-BG.jpg');
+}
+
+#specials > div > div > div:nth-child(3) > div.specials-3.specials-circle > span.price {
+  font-size:75px !important;
+  letter-spacing:-2px !important;
+  top:20px;
+  left:-2px;
+  position:relative;
+}
+
+#specials > div > div > div:nth-child(3) > div.specials-3.specials-circle > span.dollar {
+  left:-2px;
+  top:-13px !important;
 }
