finish styling reviews section non-mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,7 +15,7 @@
 @import "dependencies/slider.scss";
 @import "dependencies/meet-the-doctor.scss";
 @import "dependencies/specials-below.scss";
-
+@import "dependencies/reviews.scss";
 
 // End Canvas Dependencies //
 
