--- a/css/main.css
+++ b/css/main.css
@@ -26332,6 +26332,40 @@ h4.modal-title {
 #specials-below .tleft {
   margin-top: 12px; }
 
+#reviews h3 {
+  color: #F2D55A;
+  font-weight: 700; }
+
+#reviews {
+  padding: 50px 0;
+  background-image: url("../images/reviews-bg.jpg"); }
+
+.bf-spn {
+  color: #FFF;
+  font-size: 16px !important;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400; }
+
+.bf-pro {
+  color: #FFF !important;
+  font-size: 16px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 400; }
+
+.bf-pro:hover {
+  text-decoration: underline !important; }
+
+.device-sm #bfpublish {
+  max-height: 510px; }
+
+.device-xxs #bfpublish {
+  max-height: 350px; }
+
+.bf-dv {
+  margin-top: 50px !important; }
+
 body {
   font-family: "Lato", sans-serif; }
 
