--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,6 +16,7 @@
 @import "dependencies/meet-the-doctor.scss";
 @import "dependencies/specials-below.scss";
 @import "dependencies/reviews.scss";
+@import "dependencies/office-tour.scss";
 
 // End Canvas Dependencies //
 
