add in services carousel

--- a/css/main.css
+++ b/css/main.css
@@ -26386,6 +26386,112 @@ h4.modal-title {
 #office-tour > div > div.row > div:nth-child(1) {
   margin-top: 100px; }
 
+#services-top {
+  padding-top: 30px;
+  padding-top: 10px;
+  background: #3C4109; }
+
+#services-top h3 {
+  color: #DBC151;
+  font-weight: 700;
+  margin-bottom: 10px; }
+
+#services-top p {
+  color: #FFF;
+  font-size: 16px;
+  line-height: 25px; }
+
+#services-top p a {
+  color: #F57423;
+  text-decoration: underline; }
+
+#services > div > div > div:nth-child(1) {
+  background-image: url("../images/services/cosmetic.jpg");
+  background-size: cover;
+  height: 585px; }
+
+#services > div > div > div:nth-child(2) {
+  background-image: url("../images/services/implant.jpg");
+  background-size: cover;
+  height: 585px; }
+
+#services {
+  background: #899418; }
+
+#services h3 {
+  font-size: 42px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 900;
+  color: #FFF6CD;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
+  margin-bottom: 10px;
+  margin-top: 55%; }
+
+#services p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  color: #FFFFFF;
+  line-height: 20px; }
+
+#services > div > div:nth-child(1) > h3 {
+  padding-left: 15px; }
+
+#services > div > div:nth-child(1) > p {
+  padding-left: 15px; }
+
+body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .portfolio-item:hover .portfolio-image img, body:not(.device-touch):not(.device-xs):not(.device-xxs) .bothsidebar .portfolio-3.portfolio-notitle .portfolio-item:hover .portfolio-image img, body:not(.device-touch):not(.device-xs):not(.device-xxs) .bothsidebar .portfolio-2.portfolio-notitle .portfolio-item:hover .portfolio-image img, body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .iportfolio:hover .portfolio-image img {
+  -webkit-transform: translateY(0%);
+  transform: translateY(0%); }
+
+.portfolio-full.portfolio-notitle .portfolio-desc, .portfolio-nomargin.portfolio-notitle .portfolio-desc, #related-portfolio > div.owl-stage-outer > div > div > div > div > div.portfolio-desc {
+  bottom: 0px !important; }
+
+#related-portfolio div.portfolio-desc {
+  background-color: rgba(32, 36, 0, 0.36);
+  height: 38px; }
+
+#services-carousel .img-wrap {
+  display: inline-block;
+  position: relative; }
+  #services-carousel .img-wrap:hover:before {
+    content: " ";
+    display: block;
+    position: absolute;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.37); }
+  #services-carousel .img-wrap:hover:after {
+    content: "+";
+    position: absolute;
+    top: 50%;
+    margin-top: -45px;
+    color: white;
+    font-size: 60px;
+    left: 50%;
+    margin-left: -15px;
+    z-index: 11; }
+
+#services-carousel .owl-carousel {
+  z-index: 999 !important; }
+
+#services-carousel .portfolio-desc span {
+  font-family: 'Lato', sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+  color: #FFF6CD;
+  position: relative;
+  transform: translateY(-50%);
+  height: auto;
+  text-align: center; }
+
+#services-carousel .img-wrap {
+  cursor: pointer; }
+
+#services-carousel .iportfolio .portfolio-image {
+  height: 316px; }
+
 body {
   font-family: "Lato", sans-serif; }
 
