--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@
 @import "dependencies/specials-below.scss";
 @import "dependencies/reviews.scss";
 @import "dependencies/office-tour.scss";
+@import "dependencies/services.scss";
 
 // End Canvas Dependencies //
 
