--- a/scss/dependencies/footer.scss
+++ b/scss/dependencies/footer.scss
@@ -48,3 +48,12 @@ a.social-icon.si-colored {
   justify-content:center;
   position:relative;
 }
+
+#sub-copyright .finance-text {
+  font-family: 'Open Sans', sans-serif;
+  margin-right:10px;
+}
+#sub-copyright {
+  background:#FFF;
+  padding:10px 0;
+}
