--- a/scss/dependencies/location-section.scss
+++ b/scss/dependencies/location-section.scss
@@ -81,5 +81,8 @@ $click-map-color:#846A20;
 }
 #google-map {
   height:100%;
-  border-bottom:5px solid #FFF;
+}
+
+#contact p {
+  margin-bottom:0;
 }
