--- a/css/main.css
+++ b/css/main.css
@@ -25795,9 +25795,6 @@ Copyright (c) 2014 Daniel Eden
 body.stretched #header.full-header .container {
   padding: 0; }
 
-#copyrights {
-  background: grey; }
-
 a.social-icon.si-colored:hover {
   text-decoration: none; }
 
@@ -25842,6 +25839,14 @@ a.social-icon.si-colored {
 #sub-copyright {
   background: #FFF;
   padding: 10px 0; }
+
+#copyright {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 300;
+  font-size: 14px; }
+
+#copyrights {
+  background-color: #3C4109; }
 
 /** PHONE SLUG **/
 .phone-slug {
