--- a/scss/dependencies/footer.scss
+++ b/scss/dependencies/footer.scss
@@ -1,9 +1,5 @@
 $font-color: #FFF;
-$background: grey;
 
-#copyrights {
-  background:$background;
-}
 
 a.social-icon.si-colored:hover {
   text-decoration:none;
@@ -56,4 +52,14 @@ a.social-icon.si-colored {
 #sub-copyright {
   background:#FFF;
   padding:10px 0;
+}
+
+#copyright {
+  font-family:'Roboto Condensed', sans-serif;
+  font-weight:300;
+  font-size:14px;
+}
+
+#copyrights {
+  background-color: #3C4109;
 }
