fix bottom border in services carousel

--- a/css/main.css
+++ b/css/main.css
@@ -26459,7 +26459,7 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
   transform: translateY(0%); }
 
 .portfolio-full.portfolio-notitle .portfolio-desc, .portfolio-nomargin.portfolio-notitle .portfolio-desc, #related-portfolio .portfolio-desc {
-  bottom: 0px !important; }
+  bottom: 5px !important; }
 
 #related-portfolio div.portfolio-desc {
   background-color: rgba(32, 36, 0, 0.36);
@@ -26502,7 +26502,7 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
   cursor: pointer; }
 
 #services-carousel .iportfolio .portfolio-image {
-  height: 316px; }
+  background: #FFDE86; }
 
 #services-carousel .owl-carousel .owl-nav [class*=owl-] {
   opacity: inherit !important;
@@ -26522,9 +26522,6 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
   top: -7px;
   font-size: 40px;
   font-weight: 900; }
-
-#services-carousel {
-  border-bottom: 3px solid #FFDE86; }
 
 body {
   font-family: "Lato", sans-serif; }
