--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,7 @@
 @import "dependencies/reviews.scss";
 @import "dependencies/office-tour.scss";
 @import "dependencies/services.scss";
+@import "dependencies/service-modal.scss";
 
 // End Canvas Dependencies //
 
