--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,6 +19,7 @@
 @import "dependencies/office-tour.scss";
 @import "dependencies/services.scss";
 @import "dependencies/service-modal.scss";
+@import "dependencies/contact.scss";
 
 // End Canvas Dependencies //
 
