--- a/scss/dependencies/contact.scss
+++ b/scss/dependencies/contact.scss
@@ -1,3 +1,80 @@
 #contact p {
+  font-family: "Open Sans", sans-serif;
+  font-size:16px;
+  color: #6F6D69;
+}
+
+#contact img {
+  margin-top:10px;
+  height:120px !important;
+}
+#contact .p-1 {
   margin-bottom:0;
+}
+.p-2 {
+  margin-bottom:25px !important;
+}
+.p-3 a {
+  color:#52659A;
+  font-size:17px !important;
+  text-decoration:underline;
+}
+#contact .p-3 {
+  margin-bottom:15px;
+}
+#contact .p-4 {
+  margin-bottom:5px;
+}
+
+.p-5 a {
+  font-family: 'Lato', sans-serif;
+  font-weight:900;
+  font-size: 36px;
+  color: #3C4109;
+}
+#contact .p-5 {
+  margin-bottom:10px;
+}
+#contact .p-6 {
+  margin-bottom:5px;
+}
+
+#contact .p-7 {
+  margin-bottom:12px;
+}
+
+.p-7 a {
+  font-family: 'Lato', sans-serif;
+  font-weight:900;
+  font-size: 26px;
+  color: #3C4109;
+  margin-bottom:20px !important;
+}
+
+#contact .p-8 {
+  font-family: 'Lato', sans-serif;
+  font-weight:900;
+  font-size: 24px;
+  color: #3C4109;
+  margin-bottom:5px;
+}
+
+#contact #contact-form-overlay-mini > div > div.row > div.col-xs-4 > div {
+  position:relative;
+  right:-45px;
+}
+
+#contact {
+  max-height:616px;
+  background:url('../images/map-full.png');
+}
+
+.device-xs #contact, .device-xxs #contact {
+  background:none;
+}
+
+.device-xs #contact-form-overlay-mini, .device-xxs #contact-form-overlay-mini {
+  box-shadow:none;
+  top:-60px;
+  position:relative;
 }
