--- a/scss/dependencies/services.scss
+++ b/scss/dependencies/services.scss
@@ -43,7 +43,6 @@
   color: #FFF6CD;
   text-shadow: 0 2px 4px rgba(0,0,0,0.50);
   margin-bottom:10px;
-  margin-top:55%;
 }
 
 #services p {
@@ -141,4 +140,13 @@ body:not(.device-touch):not(.device-xs):not(.device-xxs) .portfolio-notitle .por
   top:-7px;
   font-size:40px;
   font-weight:900;
+}
+
+.device-sm #services h3, .device-xs #services h3, .device-xxs #services h3 {
+  margin-top:0;
+}
+
+.wrap-services {
+  position:absolute;
+  bottom:0;
 }
