--- a/scss/dependencies/phone-slug.scss
+++ b/scss/dependencies/phone-slug.scss
@@ -1,6 +1,6 @@
 /** PHONE SLUG **/
 
-$background: #CBBC7A;
+$background: #EDE7D0;
 $text-color: #3A3F09;
 $phone-color: #FFF;
 
@@ -29,7 +29,7 @@ $phone-color: #FFF;
   font-weight:700;
 }
 .device-xs .phone-slug .new-hotline, .device-xxs .phone-slug .new-hotline {
-  margin-bottom:20px;
+  margin-bottom:30px;
 }
 .phone-slug .old-hotline {
   font-size:17px;
@@ -80,4 +80,23 @@ $phone-color: #FFF;
   border-bottom:3px solid #FFF;
 }
 
+.device-xs .phone-slug h6, .device-xxs .phone-slug h6 {
+  font-size:16px;
+  font-weight:400;
+  margin-bottom:5px;
+}
 
+.device-xs .phone-slug .old-hotline a, .device-xxs .phone-slug .old-hotline a {
+  font-size:21px;
+
+}
+.device-xs .phone-slug .old-hotline, .device-xxs .phone-slug .old-hotline {
+  font-size:16px;
+  font-weight:400;
+  line-height:22px !important;
+
+}
+
+.device-xs .phone-slug .col-sm-6.tleft, .device-xxs .phone-slug .col-sm-6.tleft {
+  margin-bottom:50px;
+}
