--- a/scss/dependencies/meet-the-doctor.scss
+++ b/scss/dependencies/meet-the-doctor.scss
@@ -65,3 +65,19 @@
 .device-xs #meet-the-doctor-mobile img, .device-xxs #meet-the-doctor-mobile img {
   margin-bottom:20px;
 }
+
+.device-xs #meet-the-doctor-mobile h2 {
+  font-size:36px;
+}
+
+.device-xs #meet-the-doctor-mobile h4 {
+  font-size:23px;
+}
+
+.device-xxs #meet-the-doctor-mobile h2 {
+  font-size:30px;
+}
+
+.device-xxs #meet-the-doctor-mobile h4 {
+  font-size:18px;
+}
