--- a/scss/dependencies/office-tour.scss
+++ b/scss/dependencies/office-tour.scss
@@ -42,3 +42,9 @@
 .owl-carousel .owl-nav [class*=owl-]:hover {
   background:#3C4109 !important;
 }
+.device-xs #office-tour h3, .device-xxs #office-tour h3 {
+  margin-bottom:-75px;
+}
+.device-xs #office-tour .button, .device-xxs #office-tour .button {
+  margin-bottom:20px;
+}
