--- a/scss/dependencies/specials.scss
+++ b/scss/dependencies/specials.scss
@@ -195,3 +195,11 @@ $p-color: red;
 .device-xxs #specials-top {
   height:210px;
 }
+
+.device-xxs #specials-top h3 {
+  line-height:35px;
+  margin-bottom:20px;
+}
+.device-xxs #specials-top h5 {
+  line-height:30px;
+}
