fix navbar for mobile

--- a/scss/dependencies/navbar.scss
+++ b/scss/dependencies/navbar.scss
@@ -52,3 +52,7 @@ body.stretched #header.full-header .container {
 }
 
 
+.device-sm #logo img, .device-xs #logo img, .device-xxs #logo img {
+  margin-left:0;
+}
+
