--- a/css/main.css
+++ b/css/main.css
@@ -25796,6 +25796,9 @@ Copyright (c) 2014 Daniel Eden
 body.stretched #header.full-header .container {
   padding: 0; }
 
+.device-sm #logo img, .device-xs #logo img, .device-xxs #logo img {
+  margin-left: 0; }
+
 a.social-icon.si-colored:hover {
   text-decoration: none; }
 
@@ -26360,6 +26363,9 @@ h4.modal-title {
 
 .device-sm #slide-2 {
   background-position-x: 70%; }
+
+.device-sm #slide-3 {
+  background-position-x: 30% !important; }
 
 #meet-the-doctor h3 {
   font-size: 32px;
