--- a/scss/dependencies/slider.scss
+++ b/scss/dependencies/slider.scss
@@ -132,5 +132,5 @@
   background-position-x:70%;
 }
 .device-sm #slide-3 {
-  background-position-x:30%;
+  background-position-x:30% !important;
 }
