finish styling slide 1 mobile

--- a/css/main.css
+++ b/css/main.css
@@ -26367,6 +26367,41 @@ h4.modal-title {
 .device-sm #slide-3 {
   background-position-x: 30% !important; }
 
+.device-xs #slide-1 h2, .device-xxs #slide-1 h2 {
+  font-size: 20px; }
+
+.device-xs #slide-1 h1, .device-xxs #slide-1 h1 {
+  font-size: 24px; }
+
+.device-xs #slide-1 h4, .device-xxs #slide-1 h4 {
+  font-size: 16px; }
+
+.device-xs #slide-1 > div > div, .device-xxs #slide-1 > div > div {
+  margin-top: 15px; }
+
+.device-xxs #slide-1 > div > div {
+  left: -20px; }
+
+.device-xxs #slide-1 h1 {
+  margin-bottom: 10px; }
+
+@media (max-width: 767px) {
+  #top-social, #slider:not(.swiper_wrapper) .slider-caption, .nivo-caption, .flex-caption, .slider-caption p, .slider-caption .button, .camera_caption, .ei-title, .slider-arrow-top-sm, .slider-arrow-bottom-sm {
+    display: inherit !important;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 14px; } }
+
+.device-xxs #slide-1 .button {
+  line-height: 21px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 16px;
+  height: 30px; }
+
+.device-xxs #slide-1 h4 {
+  margin-bottom: 5px; }
+
 #meet-the-doctor h3 {
   font-size: 32px;
   font-weight: 700;
