--- a/scss/dependencies/slider.scss
+++ b/scss/dependencies/slider.scss
@@ -192,27 +192,30 @@
 .device-xs #slide-2 .slider-caption, .device-xxs #slide-2 .slider-caption {
   margin-top:-135px;
 }
+.device-xxs #slide-2 .slider-caption {
+  margin-top:-150px;
+  margin-right:-5%;
+}
 
-.device-xs #slide-2 > div > div > h2, .device-xxs #slide-1 > div > div > h2 {
-  text-align:left !important;
+.device-xs #slide-2 > div > div > h2, .device-xxs #slide-2 > div > div > h2 {
+  text-align:right !important;
   font-size:22px;
 }
 
-.device-xs #slide-2 > div > div > p, .device-xxs #slide-2 > div >div > p {
-    text-align:right !important;
-    margin-top:10px;
-    padding-left:205px;
-    padding-right:0;
+.device-xs #slide-2 > div > div > p, .device-xxs #slide-2 > div > div > p {
+  text-align:right !important;
+  margin-top:10px;
+  padding-left:230px;
+  padding-right:0;
   margin-bottom:10px;
   font-size:16px;
+  line-height:21px !important;
 }
 .device-xs #slide-2 .button, .device-xxs #slide-2 .button {
-  height:30px;
   padding-left:20px;
   padding-right:20px;
   font-size:14px;
   width:100%;
-  line-height:21px !important;
 }
 .device-xs #slide-2 .btn-wrap, .device-xxs #slide-2 .btn-wrap {
   float:right;
@@ -227,3 +230,87 @@
 .device-xxs #slide-2 > div > div > p {
   display:none !important;
 }
+
+.device-xs #slide-3 h2 {
+  text-align:left !important;
+  font-size:24px;
+}
+
+.device-xxs #slide-3 h2 {
+  font-size:22px;
+  text-align:left !important;
+}
+.device-xs #slide-3 .star-set, .device-xxs #slide-3 .star-set {
+  text-align:left !important;
+  margin-bottom:-5px;
+  margin-top:10px;
+}
+.device-xs #slide-3 h4, .device-xxs #slide-3 h4 {
+  text-align:left !important;
+  padding-right:165px;
+}
+.device-xs #slide-3 .button, .device-xxs #slide-3 .button {
+  float:left;
+}
+.device-xxs #slide-3 .button {
+  line-height:27px;
+  height:35px;
+  margin-left:0;
+}
+
+.device-xs #slide-3 .slider-caption, .device-xxs #slide-3 .slider-caption {
+  #slide-3 {
+    margin-top:20px;
+  }
+}
+
+.device-xs #slide-3 h4 {
+  padding-right:150px;
+  font-size:20px;
+  margin:10px 0;
+}
+
+.device-xxs #slide-3 h4 {
+  padding-right:150px;
+  font-size:18px;
+  margin-top:5px;
+  margin-bottom:0;
+}
+
+.device-xxs #slide-1 > div > div > h2 {
+  font-size:20px;
+  text-align:left !important;
+}
+.device-xxs #slide-1 h1 {
+  font-size:22px;
+}
+
+.device-xxs #logo img {
+  margin-left:-15%;
+}
+.device-xxs #primary-menu-trigger {
+  margin-right:-10%;
+}
+
+@media (max-width:350px) {
+  .device-xxs #logo img {
+    margin-left:-10%;
+  }
+  .device-xxs #primary-menu-trigger {
+    margin-right:-5%;
+  }
+}
+
+.device-xxs #slide-3 .slider-caption {
+  margin-left:-10%;
+}
+.device-xxs #slide-3 h4 {
+  font-size:12px;
+  line-height:18px !important;
+}
+
+.device-xxs #slide-3 .icon-star3 {
+  font-size:16px;
+}
+
+
